# bookmark-rss-tyoukan

./: .env.test.example  .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.claude/: settings.json
.claude/rules/: dev-workflow.md  frontend.md  patterns.md  python.md  rust.md  typescript.md
.github/workflows/: ai.yml  auth.yml  ci-auth.yml  ci-bff.yml  ci-extension.yml  ci-feed.yml  ci-notification.yml  ci-web.yml  cli.yml  feed.yml  mcp-server.yml
.serena/: project.yml
.todos/: todos.db  todos.db-shm  todos.db-wal
apps/cli/: CLAUDE.md  Cargo.toml
apps/cli/src/: config.rs  error.rs  main.rs  output.rs
apps/cli/src/auth/: mod.rs  oauth_server.rs  token_store.rs
apps/cli/src/client/: api_client.rs  mod.rs  models.rs
apps/cli/src/commands/: article.rs  bookmark.rs  feed.rs  login.rs  mod.rs
apps/cli/tests/: e2e_article.rs  e2e_bookmark.rs  e2e_feed.rs  e2e_helpers.rs
apps/extension/: .env.example  package.json  tsconfig.json  vitest.config.ts  wxt.config.ts
apps/web/: CLAUDE.md  eslint.config.js  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: 01.要求定義.md  02.技術設計.md  03.データモデル.md  04.API型定義.md  05.ディレクトリ構成.md  05.開発の進め方.md
docs/knowledge/: 001_シードデータとフレームワーク管理データの境界.md
docs/sp#1/: 00.フィードバック計画.md
docs/sp#2/: 00.フィードバック計画.md
infra/: .env.deploy.example  cdk.json  package.json  tsconfig.json
infra/functions/: jwt-authorizer.ts
infra/lib/: ai-runtime.ts  api-gateway.ts  bookmark-rss-stack.ts  lambda-functions.ts  schedulers.ts  ssm-params.ts
infra/scripts/: setup-ssm.sh
openapi/: ai.yaml  auth.yaml  bff.yaml  feed.yaml  notification.yaml
scripts/: seed-test-data.ts
services/ai/: CLAUDE.md  Dockerfile  agentcore_main.py  pyproject.toml
services/ai/src/: agentcore_entry.py  config.py  main.py  schemas.py
services/ai/src/clients/: feed_client.py  notification_client.py
services/ai/src/lib/: auth.py  errors.py  logger.py  ogp.py
services/ai/src/routes/: digest.py
services/ai/src/services/: article_selector.py  summarizer.py
services/ai/tests/: conftest.py  test_article_selector.py  test_auth.py  test_config.py  test_digest_route.py  test_feed_client.py  test_notification_client.py  test_schemas.py  test_summarizer.py
services/auth/: CLAUDE.md  package.json  tsconfig.json
services/bff/: CLAUDE.md  eslint.config.js  package.json
services/feed/: CLAUDE.md  package.json  tsconfig.json
services/notification/: CLAUDE.md  package.json  (+2 more)
(+170 files in other folders)
