[package]
name = "bookmark-rss-cli"
version = "0.0.1"
edition = "2021"
description = "CLI経由で記事検索・ブックマーク操作"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
